--- a/scraper/historical sales model.ipynb
+++ b/scraper/historical sales model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
        "'Connected: prod@rental_nerd'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,10 +32,9 @@
     "# imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import datetime\n",
-    "from datetime import datetime\n",
-    "from datetime import date\n",
+    "import datetime as dt\n",
     "import matplotlib.pyplot as plt\n",
+    "import timeit  # for timing models\n",
     "\n",
     "# this allows plots to appear directly in the notebook\n",
     "%matplotlib inline\n",
@@ -51,7 +50,7 @@
     "from sklearn.model_selection import TimeSeriesSplit\n",
     "\n",
     "# city abbreviation code\n",
-    "city = 'PH'\n",
+    "city = 'DENVER'\n",
     "# limit on number of lines returned from sql queries (for debugging)\n",
     "limit = 10000000\n",
     "\n",
@@ -61,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -69,7 +68,7 @@
    "source": [
     "# data columns used for the booster\n",
     "factors = ['property_id', 'bedrooms', 'bathrooms', 'sqft','longitude', 'latitude','zipcode', 'elevation', 'garage'\n",
-    "                          ,'year_built', 'level','dist_to_park','dist_to_golf_course', 'has_pool','school_district_id'\n",
+    "                          ,'year_built', 'level','dist_to_park','dist_to_golf_course', 'has_pool'\n",
     "                          , 'date_closed','multifamily']\n",
     "\n",
     "# booster parameters\n",
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -105,7 +104,7 @@
     "    data[\"has_pool\"] = data[\"has_pool\"].apply(lambda x: True if x == 1.0 else False)\n",
     "    data[\"garage\"] = data[\"garage\"].apply(lambda x: True if x == 1.0 else False)\n",
     "    data[\"multifamily\"] = data[\"home_type\"].apply(lambda x: True if x == \"mfh\" else False)\n",
-    "    data['date_closed'] = data['date_closed'].apply(lambda x: (x - date(2000, 1, 1)))\n",
+    "    data['date_closed'] = data['date_closed'].apply(lambda x: (x - dt.date(2000, 1, 1)))\n",
     "    data['date_closed'] = data['date_closed'].astype(int)\n",
     "    \n",
     "    return data\n",
@@ -118,8 +117,7 @@
     "    from  \\\n",
     "    properties, \\\n",
     "    property_transaction_logs, \\\n",
-    "    area_name_zipcodes, \\\n",
-    "    property_school_districts \\\n",
+    "    area_name_zipcodes \\\n",
     "    where  \\\n",
     "    property_transaction_logs.created_at > :date and \\\n",
     "    area_name_zipcodes.`area_name` = :city and \\\n",
@@ -127,8 +125,7 @@
     "    properties.`id` = property_transaction_logs.`property_id` and \\\n",
     "    property_transaction_logs.`transaction_status` = :transaction_status and \\\n",
     "    property_transaction_logs.`transaction_type` = :transaction_type and \\\n",
-    "    property_transaction_logs.`is_latest` = true and \\\n",
-    "    property_school_districts.`property_id` = properties.`id` \\\n",
+    "    property_transaction_logs.`is_latest` = true \\\n",
     "    order by \\\n",
     "    property_transaction_logs.id desc \\\n",
     "    limit :limit)\n",
@@ -138,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -147,7 +144,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "495700 rows affected.\n"
+      "392663 rows affected.\n"
      ]
     }
    ],
@@ -157,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -166,8 +163,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entries before filter:  495700\n",
-      "Entries after filter:  445454\n"
+      "Entries before filter:  392663\n",
+      "Entries after filter:  325899\n"
      ]
     }
    ],
@@ -180,22 +177,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Time to train model:  17566.896312999997\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# train model based on historical sales information\n",
-    "import timeit\n",
     "start_time = timeit.default_timer()\n",
     "\n",
     "dtrain = xgb.DMatrix(sales_train[factors].values, label=sales_train.price, feature_names=factors)\n",
@@ -210,21 +198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model Report\n",
-      "MAE Score (Train): 31703.234560\n",
-      "R^2: 0.720092\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# predict the training set using the model - note this is in sample testing\n",
     "dtrain_predictions = bst.predict(dtrain)\n",
@@ -238,45 +216,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "35183 rows affected.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for_sale = query('sales', 'open', city, limit)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'str' object has no attribute 'today'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-537655e62786>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# use today's date for 'close date' since the transaction is still open i.e. home is currently listed for sale\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfor_sale\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdate_closed\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdate\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtoday\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mfor_sale\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msanitize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfor_sale\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# remove for rent listings that are categorized as for sale\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'str' object has no attribute 'today'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use today's date for 'close date' since the transaction is still open i.e. home is currently listed for sale\n",
-    "for_sale.date_closed = date.today()\n",
+    "for_sale.date_closed = dt.date.today()\n",
     "for_sale = sanitize(for_sale)\n",
     "\n",
     "# remove for rent listings that are categorized as for sale\n",
@@ -326,10 +284,13 @@
    "outputs": [],
    "source": [
     "# train rental model\n",
-    "\n",
+    "start_time = timeit.default_timer() # start timer\n",
     "rent_train = sanitize(rent_train)\n",
     "dtrain = xgb.DMatrix(rent_train[factors].values, label=rent_train.price, feature_names=factors)\n",
     "rent_bst = xgb.train( plst, dtrain, num_round )\n",
+    "\n",
+    "elapsed = timeit.default_timer() - start_time # end timer\n",
+    "print(\"Time to train model: \", elapsed)\n",
     "\n",
     "# save rental model\n",
     "rent_bst.save_model(city + '_rent.model')"
