removing sales model

--- a/scraper/historical sales model.ipynb
+++ b/scraper/historical sales model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
        "'Connected: prod@rental_nerd'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
     "from sklearn.model_selection import TimeSeriesSplit\n",
     "\n",
     "# city abbreviation code\n",
-    "city = 'DENVER'\n",
+    "city = 'SF'\n",
     "# limit on number of lines returned from sql queries (for debugging)\n",
     "limit = 10000000\n",
     "\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -144,7 +144,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "392663 rows affected.\n"
+      "18893 rows affected.\n"
      ]
     }
    ],
@@ -163,8 +163,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Entries before filter:  392663\n",
-      "Entries after filter:  325899\n"
+      "Entries before filter:  18893\n",
+      "Entries after filter:  7922\n"
      ]
     }
    ],
