moving models out

--- a/scraper/historical sales model.ipynb
+++ b/scraper/historical sales model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -21,7 +21,7 @@
        "'Connected: prod@rental_nerd'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +50,7 @@
     "from sklearn.model_selection import TimeSeriesSplit\n",
     "\n",
     "# city abbreviation code\n",
-    "city = 'TUSCON'\n",
+    "city = 'SEATTLE'\n",
     "# limit on number of lines returned from sql queries (for debugging)\n",
     "limit = 10000000\n",
     "\n",
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -135,19 +135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "27759 rows affected.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sales_train = query('sales', 'closed', city, limit)"
    ]
@@ -158,16 +150,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Entries before filter:  27759\n",
-      "Entries after filter:  26377\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sales_train = sanitize(sales_train)\n",
     "\n",
