added date_listed filter

--- a/scraper/ilya_test.ipynb
+++ b/scraper/ilya_test.ipynb
@@ -189,6 +189,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<slacker.Response at 0x7fa0fee52ac8>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from slacker import Slacker\n",
+    "\n",
+    "slack = Slacker('xoxp-8258629254-8258534756-144740419351-f7114b44b3b813746689868547498268')\n",
+    "\n",
+    "# Send a message to #general channel\n",
+    "slack.chat.post_message('#general', 'Hello fellow slackers!')\n",
+    "\n",
+    "# Get users list\n",
+    "response = slack.users.list()\n",
+    "users = response.body['members']\n",
+    "\n",
+    "# Upload a file\n",
+    "slack.files.upload('PH_target_list.csv', channels='#general')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
