--- a/scraper/sql_query_helper.ipynb
+++ b/scraper/sql_query_helper.ipynb
@@ -2,26 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'Connected: prod@rental_nerd'"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -203,9 +195,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1188 rows affected.\n",
-      "Top zipcode by count is 94565 with 18736 properties\n",
-      "100th zipcode by count is 85138 with 9689 properties\n",
+      "1197 rows affected.\n",
+      "Top zipcode by count is 94565 with 18740 properties\n",
+      "100th zipcode by count is 85254 with 9697 properties\n",
       "11 rows affected.\n",
       "Order of city models to run: ['BAY_AREA' 'HOUSTON' 'PH' 'VEGAS' 'DENVER' 'ST_LOUIS' 'SEATTLE' 'SF'\n",
       " 'PORTLAND' 'TUSCON' 'DETROIT']\n"
@@ -217,7 +209,7 @@
     "zipcode_list = top_zipcodes(2000)\n",
     "\n",
     "# limit on number of lines returned from sql queries (for debugging)\n",
-    "limit = 100\n",
+    "limit = 10000000\n",
     "\n",
     "# get list of all available cities\n",
     "cities = city_query()\n",
@@ -237,18 +229,8 @@
      "output_type": "stream",
      "text": [
       "Running queries for city BAY_AREA\n",
-      "100 rows affected.\n",
-      "100 rows affected.\n",
-      "100 rows affected.\n",
-      "Entries before filter:  100\n",
-      "Entries after filter:  93\n",
-      "Entries before filter:  100\n",
-      "Entries after filter:  100\n",
-      "Entries before filter:  100\n",
-      "Entries after filter:  99\n",
-      "Running queries for city HOUSTON\n",
-      "100 rows affected.\n",
-      "100 rows affected.\n"
+      "1306 rows affected.\n",
+      "112558 rows affected.\n"
      ]
     }
    ],
