--- a/scraper/sql_query_helper.ipynb
+++ b/scraper/sql_query_helper.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -230,7 +230,114 @@
      "text": [
       "Running queries for city BAY_AREA\n",
       "1306 rows affected.\n",
-      "112558 rows affected.\n"
+      "112558 rows affected.\n",
+      "35015 rows affected.\n",
+      "Entries before filter:  112558\n",
+      "Entries after filter:  108659\n",
+      "Entries before filter:  35015\n",
+      "Entries after filter:  34998\n",
+      "Entries before filter:  1306\n",
+      "Entries after filter:  1304\n",
+      "Running queries for city HOUSTON\n",
+      "637 rows affected.\n",
+      "57600 rows affected.\n",
+      "25350 rows affected.\n",
+      "Entries before filter:  57600\n",
+      "Entries after filter:  49236\n",
+      "Entries before filter:  25350\n",
+      "Entries after filter:  25322\n",
+      "Entries before filter:  637\n",
+      "Entries after filter:  621\n",
+      "Running queries for city PH\n",
+      "2817 rows affected.\n",
+      "347977 rows affected.\n",
+      "54368 rows affected.\n",
+      "Entries before filter:  347977\n",
+      "Entries after filter:  333316\n",
+      "Entries before filter:  54368\n",
+      "Entries after filter:  54321\n",
+      "Entries before filter:  2817\n",
+      "Entries after filter:  2811\n",
+      "Running queries for city VEGAS\n",
+      "511 rows affected.\n",
+      "132179 rows affected.\n",
+      "29214 rows affected.\n",
+      "Entries before filter:  132179\n",
+      "Entries after filter:  126696\n",
+      "Entries before filter:  29214\n",
+      "Entries after filter:  29187\n",
+      "Entries before filter:  511\n",
+      "Entries after filter:  510\n",
+      "Running queries for city DENVER\n",
+      "174 rows affected.\n",
+      "50441 rows affected.\n",
+      "9810 rows affected.\n",
+      "Entries before filter:  50441\n",
+      "Entries after filter:  49421\n",
+      "Entries before filter:  9810\n",
+      "Entries after filter:  9804\n",
+      "Entries before filter:  174\n",
+      "Entries after filter:  174\n",
+      "Running queries for city ST_LOUIS\n",
+      "5 rows affected.\n",
+      "45417 rows affected.\n",
+      "5941 rows affected.\n",
+      "Entries before filter:  45417\n",
+      "Entries after filter:  37522\n",
+      "Entries before filter:  5941\n",
+      "Entries after filter:  5899\n",
+      "Entries before filter:  5\n",
+      "Entries after filter:  2\n",
+      "Running queries for city SEATTLE\n",
+      "139 rows affected.\n",
+      "23713 rows affected.\n",
+      "5631 rows affected.\n",
+      "Entries before filter:  23713\n",
+      "Entries after filter:  23189\n",
+      "Entries before filter:  5631\n",
+      "Entries after filter:  5630\n",
+      "Entries before filter:  139\n",
+      "Entries after filter:  139\n",
+      "Running queries for city SF\n",
+      "68 rows affected.\n",
+      "609 rows affected.\n",
+      "840 rows affected.\n",
+      "Entries before filter:  609\n",
+      "Entries after filter:  536\n",
+      "Entries before filter:  840\n",
+      "Entries after filter:  839\n",
+      "Entries before filter:  68\n",
+      "Entries after filter:  68\n",
+      "Running queries for city PORTLAND\n",
+      "152 rows affected.\n",
+      "63934 rows affected.\n",
+      "9622 rows affected.\n",
+      "Entries before filter:  63934\n",
+      "Entries after filter:  62108\n",
+      "Entries before filter:  9622\n",
+      "Entries after filter:  9615\n",
+      "Entries before filter:  152\n",
+      "Entries after filter:  151\n",
+      "Running queries for city TUSCON\n",
+      "167 rows affected.\n",
+      "10346 rows affected.\n",
+      "2407 rows affected.\n",
+      "Entries before filter:  10346\n",
+      "Entries after filter:  9734\n",
+      "Entries before filter:  2407\n",
+      "Entries after filter:  2391\n",
+      "Entries before filter:  167\n",
+      "Entries after filter:  164\n",
+      "Running queries for city DETROIT\n",
+      "189 rows affected.\n",
+      "22868 rows affected.\n",
+      "5429 rows affected.\n",
+      "Entries before filter:  22868\n",
+      "Entries after filter:  5891\n",
+      "Entries before filter:  5429\n",
+      "Entries after filter:  5249\n",
+      "Entries before filter:  189\n",
+      "Entries after filter:  52\n"
      ]
     }
    ],
