iterative batch model

--- a/scraper/sql_query_helper-ALL.ipynb
+++ b/scraper/sql_query_helper-ALL.ipynb
@@ -2,27 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "'Connected: prod@rental_nerd'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -150,7 +142,7 @@
     "    \n",
     "    for_sale = q[(q.transaction_type == \"sales\") & \n",
     "                 (q.transaction_status == \"open\") & \n",
-    "                 (q.date_listed > (today - dt.timedelta(days=30))) &\n",
+    "                 (q.date_listed > (today - dt.timedelta(days=60))) &\n",
     "                 (q.zipcode.isin(for_sale_zipcode_list))]\n",
     "    sales = q[(q.transaction_type == \"sales\") & (q.transaction_status == \"closed\")]\n",
     "    rent = q[(q.transaction_type == \"rental\") & (q.transaction_status == \"closed\")]\n",
@@ -162,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -189,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -199,7 +191,42 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1440215 rows affected.\n"
+      "1440218 rows affected.\n",
+      "40334 rows affected.\n",
+      "185897 rows affected.\n",
+      "Entries before filter:  1666449\n",
+      "Entries after filter:  1311343\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:37: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:38: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:39: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:40: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "/home/ilya/anaconda3/lib/python3.6/site-packages/ipykernel/__main__.py:41: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n"
      ]
     }
    ],
