--- a/scraper/sql_query_helper-ALL.ipynb
+++ b/scraper/sql_query_helper-ALL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -14,7 +14,7 @@
        "'Connected: prod@rental_nerd'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -100,6 +100,70 @@
     "    \n",
     "    return data\n",
     "\n",
+    "def generate_city_model(sales_train, sales_test, for_sale):\n",
+    "    # cap number of homes that fit into VRAM\n",
+    "    memory_cap = 250000\n",
+    "    \n",
+    "    # init empty model that we can load into on the second iteration\n",
+    "    bst = xgb.Booster()\n",
+    "    \n",
+    "    # first run the price model\n",
+    "    label = 'price'\n",
+    "    f = factors\n",
+    "    f.remove(label) # this happens in place\n",
+    "    \n",
+    "    start_time = timeit.default_timer()\n",
+    "\n",
+    "    for g, df in sales_train.groupby(np.arange(limit) // memory_cap):  # split the dataset into 250k chunks    \n",
+    "        train_model(df, sales_test, f, label, xgb_model = (bst if g > 0 else None))\n",
+    "        \n",
+    "        # load the model into memory - should have been saved by train_model function\n",
+    "        bst.load_model(path +  'all_' + label + '_' + today.strftime('%Y%m%d') + '.model')\n",
+    "    \n",
+    "    elapsed = timeit.default_timer() - start_time\n",
+    "    slack(\"%s:\\tTime to train:\\t%f minutes\" % (city, (elapsed / 60)))\n",
+    "    \n",
+    "    target = xgb.DMatrix( for_sale[f].values, feature_names=f)\n",
+    "    ypred = bst.predict(target, ntree_limit=(bst.best_iteration if hasattr(bst, 'best_score') else None))\n",
+    "\n",
+    "    # second run the days on the market model\n",
+    "    sales_train = sales_train[(sales.days_on_market > 0 )]\n",
+    "    sales_test = sales_test[(sales.days_on_market > 0 )]\n",
+    "    label = 'days_on_market'\n",
+    "    f = factors\n",
+    "    f.remove(label)\n",
+    "    \n",
+    "    start_time = timeit.default_timer()\n",
+    "    for g, df in sales_train.groupby(np.arange(limit) // memory_cap):  # split the dataset into 100k chunks    \n",
+    "        train_model(df, sales_test, f, label, xgb_model = (bst if g > 0 else None))\n",
+    "        \n",
+    "        # load the model into memory - should have been saved by train_model function\n",
+    "        bst.load_model(path +  'all_' + label + '_' + today.strftime('%Y%m%d') + '.model')\n",
+    "    \n",
+    "    elapsed = timeit.default_timer() - start_time\n",
+    "    slack(\"%s:\\tTime to train:\\t%f minutes\" % (city, (elapsed / 60)))\n",
+    "    \n",
+    "    target = xgb.DMatrix( for_sale[f].values, feature_names=f)\n",
+    "    dayspred = bst.predict(target, ntree_limit=(bst.best_iteration if hasattr(bst, 'best_score') else None))\n",
+    "\n",
+    "    \n",
+    "    values = np.column_stack((for_sale.property_id.values\n",
+    "                             ,for_sale.address.values\n",
+    "                             ,ypred\n",
+    "                             ,for_sale.price.values\n",
+    "                             ,ypred-for_sale.price\n",
+    "                             ,ypred / for_sale.price - 1\n",
+    "                             ,dayspred\n",
+    "                             ,for_sale['origin_url'].values))\n",
+    "    output = pd.DataFrame(values[:,1:],index=values[:,0],columns=['address','ypred',\n",
+    "                                                                  'list','gain-loss', 'gain-loss%','days_pred', 'url'])\n",
+    "    output = output.sort_values(by='gain-loss',ascending=False)\n",
+    "\n",
+    "    # save target list\n",
+    "    file = 'all_target_list.csv'\n",
+    "    output.to_csv(file)\n",
+    "    slacker.files.upload(file, channels='#progress')\n",
+    "\n",
     "def query(city=\"%\", zipcode=None, limit=100, start_date=\"2000-01-01 10:01:13\", ttype='sales',tstatus='open'):\n",
     "    # convert array of zipcodes into sql string which looks like a tuple\n",
     "    placeholders = tuple(zipcode)\n",
@@ -154,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -163,7 +227,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1201 rows affected.\n",
+      "1203 rows affected.\n",
       "200 rows affected.\n"
      ]
     }
@@ -181,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -191,11 +255,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1440228 rows affected.\n",
-      "40363 rows affected.\n",
-      "185908 rows affected.\n",
-      "Entries before filter:  1666499\n",
-      "Entries after filter:  1311382\n"
+      "1433935 rows affected.\n",
+      "42135 rows affected.\n",
+      "177471 rows affected.\n",
+      "Entries before filter:  1653541\n",
+      "Entries after filter:  1307415\n"
      ]
     },
     {
