--- a/scraper/sql_query_helper-ALL.ipynb
+++ b/scraper/sql_query_helper-ALL.ipynb
@@ -2,27 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The sql extension is already loaded. To reload it, use:\n",
-      "  %reload_ext sql\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "'Connected: prod@rental_nerd'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -154,7 +146,7 @@
     "    \n",
     "    for_sale = q[(q.transaction_type == \"sales\") & \n",
     "                 (q.transaction_status == \"open\") & \n",
-    "                 (q.date_listed > (today - dt.timedelta(days=60))) &\n",
+    "                 (q.date_listed > (today - dt.timedelta(days=6000))) &\n",
     "                 (q.zipcode.isin(for_sale_zipcode_list))]\n",
     "    sales = q[(q.transaction_type == \"sales\") & (q.transaction_status == \"closed\")]\n",
     "    rent = q[(q.transaction_type == \"rental\") & (q.transaction_status == \"closed\")]\n",
@@ -166,26 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1216 rows affected.\n",
-      "200 rows affected.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get list of top zipcodes to only run the model on them (put down 2000 to get every zipcode)\n",
     "zipcode_list = top_zipcodes(2000)\n",
     "\n",
     "# we filter the current listings further to only see the top zipcodes to not predict prices in areas with weak coverage\n",
-    "focus_zipcodes = top_zipcodes(200)\n",
+    "focus_zipcodes = top_zipcodes(2000)\n",
     "\n",
     "# limit on number of lines returned from sql queries (for debugging)\n",
     "limit = 2000000"
@@ -193,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -203,11 +186,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "188576 rows affected.\n",
-      "4375 rows affected.\n",
-      "41848 rows affected.\n",
-      "Entries before filter:  234799\n",
-      "Entries after filter:  170926\n"
+      "188554 rows affected.\n",
+      "4372 rows affected.\n",
+      "41737 rows affected.\n",
+      "Entries before filter:  234663\n",
+      "Entries after filter:  170908\n"
      ]
     },
     {
@@ -252,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -490,13 +473,35 @@
        "[5 rows x 153 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "q['sales'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "53"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(q['for_sale'].index)"
    ]
   },
   {
