--- a/scraper/sql_query_helper-ALL.nbconvert.ipynb
+++ b/scraper/sql_query_helper-ALL.nbconvert.ipynb
@@ -100,70 +100,6 @@
     "    \n",
     "    return data\n",
     "\n",
-    "def generate_city_model(sales_train, sales_test, for_sale):\n",
-    "    # cap number of homes that fit into VRAM\n",
-    "    memory_cap = 250000\n",
-    "    \n",
-    "    # init empty model that we can load into on the second iteration\n",
-    "    bst = xgb.Booster()\n",
-    "    \n",
-    "    # first run the price model\n",
-    "    label = 'price'\n",
-    "    f = factors\n",
-    "    f.remove(label) # this happens in place\n",
-    "    \n",
-    "    start_time = timeit.default_timer()\n",
-    "\n",
-    "    for g, df in sales_train.groupby(np.arange(limit) // memory_cap):  # split the dataset into 250k chunks    \n",
-    "        train_model(df, sales_test, f, label, xgb_model = (bst if g > 0 else None))\n",
-    "        \n",
-    "        # load the model into memory - should have been saved by train_model function\n",
-    "        bst.load_model(path +  'all_' + label + '_' + today.strftime('%Y%m%d') + '.model')\n",
-    "    \n",
-    "    elapsed = timeit.default_timer() - start_time\n",
-    "    slack(\"%s:\\tTime to train:\\t%f minutes\" % (city, (elapsed / 60)))\n",
-    "    \n",
-    "    target = xgb.DMatrix( for_sale[f].values, feature_names=f)\n",
-    "    ypred = bst.predict(target, ntree_limit=(bst.best_iteration if hasattr(bst, 'best_score') else None))\n",
-    "\n",
-    "    # second run the days on the market model\n",
-    "    sales_train = sales_train[(sales.days_on_market > 0 )]\n",
-    "    sales_test = sales_test[(sales.days_on_market > 0 )]\n",
-    "    label = 'days_on_market'\n",
-    "    f = factors\n",
-    "    f.remove(label)\n",
-    "    \n",
-    "    start_time = timeit.default_timer()\n",
-    "    for g, df in sales_train.groupby(np.arange(limit) // memory_cap):  # split the dataset into 100k chunks    \n",
-    "        train_model(df, sales_test, f, label, xgb_model = (bst if g > 0 else None))\n",
-    "        \n",
-    "        # load the model into memory - should have been saved by train_model function\n",
-    "        bst.load_model(path +  'all_' + label + '_' + today.strftime('%Y%m%d') + '.model')\n",
-    "    \n",
-    "    elapsed = timeit.default_timer() - start_time\n",
-    "    slack(\"%s:\\tTime to train:\\t%f minutes\" % (city, (elapsed / 60)))\n",
-    "    \n",
-    "    target = xgb.DMatrix( for_sale[f].values, feature_names=f)\n",
-    "    dayspred = bst.predict(target, ntree_limit=(bst.best_iteration if hasattr(bst, 'best_score') else None))\n",
-    "\n",
-    "    \n",
-    "    values = np.column_stack((for_sale.property_id.values\n",
-    "                             ,for_sale.address.values\n",
-    "                             ,ypred\n",
-    "                             ,for_sale.price.values\n",
-    "                             ,ypred-for_sale.price\n",
-    "                             ,ypred / for_sale.price - 1\n",
-    "                             ,dayspred\n",
-    "                             ,for_sale['origin_url'].values))\n",
-    "    output = pd.DataFrame(values[:,1:],index=values[:,0],columns=['address','ypred',\n",
-    "                                                                  'list','gain-loss', 'gain-loss%','days_pred', 'url'])\n",
-    "    output = output.sort_values(by='gain-loss',ascending=False)\n",
-    "\n",
-    "    # save target list\n",
-    "    file = 'all_target_list.csv'\n",
-    "    output.to_csv(file)\n",
-    "    slacker.files.upload(file, channels='#progress')\n",
-    "\n",
     "def query(city=\"%\", zipcode=None, limit=100, start_date=\"2000-01-01 10:01:13\", ttype='sales',tstatus='open'):\n",
     "    # convert array of zipcodes into sql string which looks like a tuple\n",
     "    placeholders = tuple(zipcode)\n",
@@ -201,16 +137,16 @@
     "    return q.T.groupby(level=0).first().T\n",
     "\n",
     "def queue_city_queries(city, zipcode_list, for_sale_zipcode_list):\n",
-    "    i = query(zipcode=zipcode_list, limit=limit,ttype = 'sales',tstatus='closed')\n",
-    "    j = query(zipcode=for_sale_zipcode_list, limit=limit,ttype = 'sales',tstatus='open') \n",
-    "    k = query(zipcode=zipcode_list, limit=limit,ttype = 'rental',tstatus='closed')\n",
+    "    i = query(city=city, zipcode=zipcode_list, limit=limit,ttype = 'sales',tstatus='closed')\n",
+    "    j = query(city=city, zipcode=for_sale_zipcode_list, limit=limit,ttype = 'sales',tstatus='open') \n",
+    "    k = query(city=city, zipcode=zipcode_list, limit=limit,ttype = 'rental',tstatus='closed')\n",
     "    \n",
     "    q = pd.concat([i,j,k])\n",
     "    q = sanitize(q)\n",
     "    \n",
     "    for_sale = q[(q.transaction_type == \"sales\") & \n",
     "                 (q.transaction_status == \"open\") & \n",
-    "                 (q.date_listed > (today - dt.timedelta(days=60))) &\n",
+    "                 (q.date_listed > (today - dt.timedelta(days=6000))) &\n",
     "                 (q.zipcode.isin(for_sale_zipcode_list))]\n",
     "    sales = q[(q.transaction_type == \"sales\") & (q.transaction_status == \"closed\")]\n",
     "    rent = q[(q.transaction_type == \"rental\") & (q.transaction_status == \"closed\")]\n",
@@ -231,8 +167,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1216 rows affected.\n",
-      "1216 rows affected.\n"
+      "1217 rows affected.\n",
+      "1217 rows affected.\n"
      ]
     }
    ],
@@ -259,11 +195,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "191458 rows affected.\n",
-      "75275 rows affected.\n",
-      "139448 rows affected.\n",
-      "Entries before filter:  406181\n",
-      "Entries after filter:  223585\n"
+      "188554 rows affected.\n",
+      "7938 rows affected.\n",
+      "41737 rows affected.\n",
+      "Entries before filter:  238229\n",
+      "Entries after filter:  173930\n"
      ]
     },
     {
@@ -299,7 +235,7 @@
     }
    ],
    "source": [
-    "q = queue_city_queries(\"%\", zipcode_list, focus_zipcodes)\n",
+    "q = queue_city_queries(\"PH\", zipcode_list, focus_zipcodes)\n",
     "\n",
     "for k,v in q.items():\n",
     "    v.to_csv('CSV_backups/ALL-' + k + '.csv')\n",
@@ -332,16 +268,16 @@
        "      <th>date_transacted_latest</th>\n",
        "      <th>days_on_market</th>\n",
        "      <th>...</th>\n",
-       "      <th>zipcode_98146</th>\n",
-       "      <th>zipcode_98148</th>\n",
-       "      <th>zipcode_98155</th>\n",
-       "      <th>zipcode_98166</th>\n",
-       "      <th>zipcode_98168</th>\n",
-       "      <th>zipcode_98177</th>\n",
-       "      <th>zipcode_98178</th>\n",
-       "      <th>zipcode_98188</th>\n",
-       "      <th>zipcode_98198</th>\n",
-       "      <th>zipcode_98199</th>\n",
+       "      <th>zipcode_85379</th>\n",
+       "      <th>zipcode_85381</th>\n",
+       "      <th>zipcode_85382</th>\n",
+       "      <th>zipcode_85383</th>\n",
+       "      <th>zipcode_85387</th>\n",
+       "      <th>zipcode_85388</th>\n",
+       "      <th>zipcode_85390</th>\n",
+       "      <th>zipcode_85392</th>\n",
+       "      <th>zipcode_85395</th>\n",
+       "      <th>zipcode_85396</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>property_id</th>\n",
@@ -442,30 +378,6 @@
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7477602</th>\n",
-       "      <td>10804 E Salsabila Rd, Tucson, AZ 85747</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>TUSCON</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>6003</td>\n",
-       "      <td>2016-04-29</td>\n",
-       "      <td>2016-06-08</td>\n",
-       "      <td>40</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>7477511</th>\n",
        "      <td>9038 E Crystal Dr, Sun Lakes, AZ 85248</td>\n",
        "      <td>NaN</td>\n",
@@ -489,9 +401,33 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1041628</th>\n",
+       "      <td>4590 E Hazeltine Way, Chandler, AZ 85249</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6296</td>\n",
+       "      <td>None</td>\n",
+       "      <td>2017-03-28</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 666 columns</p>\n",
+       "<p>5 rows × 156 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -500,50 +436,50 @@
        "7498334             16202 W Mohave St, Goodyear, AZ 85338    NaN        PH   \n",
        "7491241      12544 W Alegre Dr, Litchfield Park, AZ 85340    NaN        PH   \n",
        "7481107             15542 W Supai Cir, Goodyear, AZ 85338    NaN        PH   \n",
-       "7477602            10804 E Salsabila Rd, Tucson, AZ 85747    NaN    TUSCON   \n",
        "7477511            9038 E Crystal Dr, Sun Lakes, AZ 85248    NaN        PH   \n",
+       "1041628          4590 E Hazeltine Way, Chandler, AZ 85249    NaN        PH   \n",
        "\n",
        "            bathrooms bedrooms construction  date_closed date_listed  \\\n",
        "property_id                                                            \n",
        "7498334             3        5          NaN         4717  2012-09-13   \n",
        "7491241             2        5          NaN         5354  2014-05-07   \n",
        "7481107             2        3          NaN         5149  2014-01-03   \n",
-       "7477602             4        5          NaN         6003  2016-04-29   \n",
        "7477511             2        2          NaN         5595  2015-02-12   \n",
+       "1041628             3        5          NaN         6296        None   \n",
        "\n",
-       "            date_transacted_latest days_on_market      ...      zipcode_98146  \\\n",
+       "            date_transacted_latest days_on_market      ...      zipcode_85379  \\\n",
        "property_id                                            ...                      \n",
        "7498334                 2012-11-30             78      ...                  0   \n",
        "7491241                 2014-08-29            114      ...                  0   \n",
        "7481107                 2014-02-05             33      ...                  0   \n",
-       "7477602                 2016-06-08             40      ...                  0   \n",
        "7477511                 2015-04-27             74      ...                  0   \n",
+       "1041628                 2017-03-28            NaN      ...                  0   \n",
        "\n",
-       "            zipcode_98148 zipcode_98155 zipcode_98166 zipcode_98168  \\\n",
+       "            zipcode_85381 zipcode_85382 zipcode_85383 zipcode_85387  \\\n",
        "property_id                                                           \n",
        "7498334                 0             0             0             0   \n",
        "7491241                 0             0             0             0   \n",
        "7481107                 0             0             0             0   \n",
-       "7477602                 0             0             0             0   \n",
        "7477511                 0             0             0             0   \n",
+       "1041628                 0             0             0             0   \n",
        "\n",
-       "            zipcode_98177 zipcode_98178 zipcode_98188 zipcode_98198  \\\n",
+       "            zipcode_85388 zipcode_85390 zipcode_85392 zipcode_85395  \\\n",
        "property_id                                                           \n",
        "7498334                 0             0             0             0   \n",
        "7491241                 0             0             0             0   \n",
        "7481107                 0             0             0             0   \n",
-       "7477602                 0             0             0             0   \n",
        "7477511                 0             0             0             0   \n",
+       "1041628                 0             0             0             0   \n",
        "\n",
-       "            zipcode_98199  \n",
+       "            zipcode_85396  \n",
        "property_id                \n",
        "7498334                 0  \n",
        "7491241                 0  \n",
        "7481107                 0  \n",
-       "7477602                 0  \n",
        "7477511                 0  \n",
+       "1041628                 0  \n",
        "\n",
-       "[5 rows x 666 columns]"
+       "[5 rows x 156 columns]"
       ]
      },
      "execution_count": 5,
@@ -558,6 +494,28 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6745"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(q['for_sale'].index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
