--- a/scraper/cleaning_script.ipynb
+++ b/scraper/cleaning_script.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -41,31 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 71,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "can't have unbuffered text I/O",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-64-540a6caa1958>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mbad_ones\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'bad_instances.txt'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m: can't have unbuffered text I/O"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bad_ones = []\n",
-    "f = open('bad_instances.txt', 'w', 0)"
+    "bad_ones = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false,
     "scrolled": false
@@ -114,13 +101,15 @@
     "    \n",
     "    if(query.DataFrame().bad_instances.ix[0] == 1):\n",
     "        bad_ones.append(property_id)\n",
+    "        f = open('bad_instances.txt', 'a')\n",
     "        print(\"Bad property id %i detected\" % property_id, file=f,flush=False)\n",
+    "        f.close()\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -139,14 +128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "f.close()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
