--- a/scraper/predict_sale_above_list.ipynb
+++ b/scraper/predict_sale_above_list.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -18,7 +18,7 @@
    ],
    "source": [
     "%load_ext sql\n",
-    "%sql mysql://prod:nerd@52.2.153.189/rental_nerd\n",
+    "%sql mysql://root@localhost/rental_nerd\n",
     "\n",
     "# imports\n",
     "import pandas as pd\n",
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -174,7 +174,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15959 rows affected.\n"
+      "0 rows affected.\n"
      ]
     }
    ],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -217,7 +217,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11122 rows affected.\n"
+      "0 rows affected.\n"
      ]
     }
    ],
